[package]
name = "Tones-PC-RP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator = "0.7"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
chrono = "0.4"
serde_with = "3.8.1"
reqwest = { version = "0.12.4", features = ["blocking"] }
